sale bastante bien. ya index ok. Trabajando en Produccion

--- a/actvds.html
+++ b/actvds.html
@@ -94,16 +94,19 @@
           <span class="fs-4">Olive Land Farms</span>
         </div>
         <ul class="nav nav-pills" id="menuarriba">          
-          <li class="nav-item"><a href="#" class="nav-link active">Qu&iacute;enes somos</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Qu&iacute;enes somos</a></li>
           <li class="nav-item"><a href="ciinv.html" class="nav-link">Ciencia e Investigación </a></li>
           <li class="nav-item"><a href="prod.html" class="nav-link">Producción </a></li>
-          <li class="nav-item"><a href="inform.html" class="nav-link">Informatizados </a></li>
-          <li class="nav-item"><a href="actvds.html" class="nav-link">Actividades </a></li>
+          <li class="nav-item"><a href="inform.html" class="nav-link ">Informatizados </a></li>
+          <li class="nav-item"><a href="#" class="nav-link active">Actividades </a></li>
         </ul>
       </header>
     </div> <!-- InstanceBeginEditable name="CentroEditRegion" -->
-
-    <div class="content">      
+ <div  class="justify-content-center">
+    <img src="utls/imgs/enConstrucc.PNG" />
+  </div>  
+ <div class="content " style="display: none;">  
+         
         <div class="row" id="centro info">
           <div class="col-4 " >
             <div class="border rounded-lg card">
@@ -128,19 +131,19 @@
           <div class="p-2 d-flex justify-content-center">
             <div class="ecommerce-gallery"  >
               <div class="row" id="galeria">                
-                    <img src="utls/imgs/local/IMG-05.jpg" id="galeriaImg" alt="Olive Farm" class="imagenScala80 " >                    
+                    <img src="utls/imgs/IMG-05.jpg" id="galeriaImg" alt="Olive Farm" class="imagenScala80 " >                    
               </div><!-- row fin de mostrar -->
               <!-- seccion de thumbs -->
             <div id="thumbsSeccion" class="row justify-content-center">
-              <img src="utls/imgs/local/IMG-05.jpg" alt="ads" class="imagenScala20 active" id="05" onclick="mostrarEnCarrusel('05','local');">
-              <img src="utls/imgs/local/IMG-06.jpg" alt="asda" class="imagenScala20" id="06" onclick="mostrarEnCarrusel('06','local');">
-              <img src="utls/imgs/local/IMG-10.jpg" alt="asda" class="imagenScala20" id="10" onclick="mostrarEnCarrusel('10','local');">
-              <img src="utls/imgs/local/IMG-21.jpg" alt="ads" class="imagenScala20 " id="21" onclick="mostrarEnCarrusel('21','local');">
-              <img src="utls/imgs/local/IMG-22.jpg" alt="asda" class="imagenScala20" id="22" onclick="mostrarEnCarrusel('22','local');">
-              <img src="utls/imgs/local/IMG-39.jpg" alt="asda" class="imagenScala20" id="39" onclick="mostrarEnCarrusel('39','local');">
-              <img src="utls/imgs/local/IMG-41.jpg" alt="ads" class="imagenScala20 " id="41" onclick="mostrarEnCarrusel('41','local');">
-              <img src="utls/imgs/local/IMG-42.jpg" alt="asda" class="imagenScala20" id="42" onclick="mostrarEnCarrusel('42','local');">
-              <img src="utls/imgs/local/IMG-47.jpg" alt="asda" class="imagenScala20" id="47" onclick="mostrarEnCarrusel('47','local');">
+              <img src="utls/imgs/IMG-05.jpg" alt="ads" class="imagenScala20 active" id="05" onclick="mostrarEnCarrusel('05');">
+              <img src="utls/imgs/IMG-06.jpg" alt="asda" class="imagenScala20" id="06" onclick="mostrarEnCarrusel('06');">
+              <img src="utls/imgs/IMG-10.jpg" alt="asda" class="imagenScala20" id="10" onclick="mostrarEnCarrusel('10');">
+              <img src="utls/imgs/IMG-21.jpg" alt="ads" class="imagenScala20 " id="21" onclick="mostrarEnCarrusel('21');">
+              <img src="utls/imgs/IMG-22.jpg" alt="asda" class="imagenScala20" id="22" onclick="mostrarEnCarrusel('22');">
+              <img src="utls/imgs/IMG-39.jpg" alt="asda" class="imagenScala20" id="39" onclick="mostrarEnCarrusel('39');">
+              <img src="utls/imgs/IMG-41.jpg" alt="ads" class="imagenScala20 " id="41" onclick="mostrarEnCarrusel('41');">
+              <img src="utls/imgs/IMG-42.jpg" alt="asda" class="imagenScala20" id="42" onclick="mostrarEnCarrusel('42');">
+              <img src="utls/imgs/IMG-47.jpg" alt="asda" class="imagenScala20" id="47" onclick="mostrarEnCarrusel('47');">
             </div>
             <!-- fin de seccion de thumbs -->
             </div>    
