--- a/prod.html
+++ b/prod.html
@@ -14,7 +14,7 @@
   <link href="utls/css/mycss.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body onload="llenarProdcc(0);">
 
   <div class="container">
     <!-- inicio .header -->
@@ -117,11 +117,9 @@
                       </li>
                       <!-- /END Separator -->
                       <!-- Menu with submenu -->
-                      <a href="#submenu1" data-toggle="collapse" aria-expanded="false" class="bg-olive list-group-item list-group-item-action flex-column align-items-start">
+                      <a href="#producto" class="bg-olive list-group-item list-group-item-action flex-column align-items-start" onclick="cambioProdcc('olivo');">
                           <div class="d-flex w-100 justify-content-start align-items-center">
-                              <span class="fa fa-dashboard fa-fw mr-3"></span> 
-                              <span class="menu-collapsed">Olivos</span>
-                              <span class="submenu-icon ml-auto"></span>
+                              <span class="menu-collapsed">Olivos</span>                              
                           </div>
                       </a>                                 
                      <!-- Fin de Separator with title Plantaciones-->
@@ -130,21 +128,18 @@
                           <h4>Ganadería</h4>
                       </li>
                       <!-- /END Separator -->
-                      <a href="#" class="bg-olive list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-start align-items-center">
-                              <span class="fa fa-calendar fa-fw mr-3"></span>
+                      <a href="#producto" class="bg-olive list-group-item list-group-item-action" onclick="cambioProdcc('Cerdos');">
+                          <div class="d-flex justify-content-start ">
                               <span class="menu-collapsed">Cerdos</span>
                           </div>
                       </a>
-                      <a href="#" class="bg-olive list-group-item list-group-item-action">
+                      <a href="#producto" class="bg-olive list-group-item list-group-item-action" onclick="cambioProdcc('Vacunos');">
                           <div class="d-flex w-100 justify-content-start align-items-center">
-                              <span class="fa fa-envelope-o fa-fw mr-3"></span>
-                              <span class="menu-collapsed">Vacunos </span>
+                              <span >Vacunos </span>
                           </div>
                       </a>
-                      <a href="#" class="bg-olive list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-start align-items-center">
-                              <span class="fa fa-envelope-o fa-fw mr-3"></span>
+                      <a href="#producto" class="bg-olive list-group-item list-group-item-action" onclick="cambioProdcc('Ovino-Caprino');">
+                          <div class="d-flex justify-content-start ">
                               <span class="menu-collapsed">Ovino-Caprino </span>
                           </div>
                       </a>
@@ -153,16 +148,14 @@
                       <li class="titulo-olivo list-group-item sidebar-separator menu-collapsed">
                         <h4>Aves</h4></li>            
                       <!-- /END Separator -->
-                      <a href="#" class="bg-olive list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-start align-items-center">
-                              <span class="fa fa-question fa-fw mr-3"></span>
-                              <span class="menu-collapsed">Pollos</span>
+                      <a href="#producto" class="bg-olive list-group-item list-group-item-action" onclick="cambioProdcc('Pollos');">
+                          <div class="d-flex justify-content-start" >
+                              <span >Pollos</span>
                           </div>
                       </a>
-                      <a href="#" data-toggle="sidebar-colapse" class="bg-olive list-group-item list-group-item-action d-flex align-items-center">
-                          <div class="d-flex w-100 justify-content-start align-items-center">
-                              <span id="collapse-icon" class="fa fa-2x mr-3"></span>
-                              <span id="collapse-text" class="menu-collapsed">Gansos</span>
+                      <a href="#producto" data-toggle="sidebar-colapse" class="bg-olive list-group-item list-group-item-action d-flex align-items-center">
+                          <div class="d-flex justify-content-start ">
+                              <span id="collapse-text" class="menu-collapsed" onclick="cambioProdcc('Gansos');">Gansos</span>
                           </div>
                       </a> 
                       <!-- Separator without title Aves-->                       
@@ -175,27 +168,68 @@
           <!-- fotos de la finca -->
           <div class="col-8 border rounded-lg" >
           <!-- aqui es algo -->
-          <div class="p-2 d-flex justify-content-center">
-            <div class="ecommerce-gallery"  >
-              <div class="row" id="galeria">                
-                    <img src="utls/imgs/IMG-05.jpg" id="galeriaImg" alt="Olive Farm" class="imagenScala80 " >                    
-              </div><!-- row fin de mostrar -->
-              <!-- seccion de thumbs -->
-            <div id="thumbsSeccion" class="row justify-content-center">
-              <img src="utls/imgs/IMG-05.jpg" alt="ads" class="imagenScala20 active" id="05" onclick="mostrarEnCarrusel('05');">
-              <img src="utls/imgs/IMG-06.jpg" alt="asda" class="imagenScala20" id="06" onclick="mostrarEnCarrusel('06');">
-              <img src="utls/imgs/IMG-10.jpg" alt="asda" class="imagenScala20" id="10" onclick="mostrarEnCarrusel('10');">
-              <img src="utls/imgs/IMG-21.jpg" alt="ads" class="imagenScala20 " id="21" onclick="mostrarEnCarrusel('21');">
-              <img src="utls/imgs/IMG-22.jpg" alt="asda" class="imagenScala20" id="22" onclick="mostrarEnCarrusel('22');">
-              <img src="utls/imgs/IMG-39.jpg" alt="asda" class="imagenScala20" id="39" onclick="mostrarEnCarrusel('39');">
-              <img src="utls/imgs/IMG-41.jpg" alt="ads" class="imagenScala20 " id="41" onclick="mostrarEnCarrusel('41');">
-              <img src="utls/imgs/IMG-42.jpg" alt="asda" class="imagenScala20" id="42" onclick="mostrarEnCarrusel('42');">
-              <img src="utls/imgs/IMG-47.jpg" alt="asda" class="imagenScala20" id="47" onclick="mostrarEnCarrusel('47');">
-            </div>
-            <!-- fin de seccion de thumbs -->
-            </div>    
-         
-          </div>
+          <div id="producto"class="row container-fluid">
+            <div id="producto-cabeza" class="pt-4 bg-success text-white justify-content-center">
+              <h3 id="cabeza-olivo">
+                Olea europea &nbsp;
+                
+                <select id="producto-variedad" onchange="llenarProdcc(value)">
+                  <option value="0" selected>Arbequina</option>
+                  <option value="1">Arbosana</option>
+                  <option value="2">Ascolana</option>
+                  <option value="3">Kalamata</option>
+                  <option value="4">Koroneiki</option>
+                  <option value="5">Manzanilla</option>
+                  <option value="6">Olivo Picual</option>
+                  <option value="7">Taggiasca</option>
+                </select>
+              </h3>
+              <h3 id="cabeza-otros">
+              </h3>
+            </div><!-- div fin producto-cabeza -->
+            <div id="producto-fotos" class="">
+              <div class="row">
+                    <div >
+                        <img src="./imgs/local/IMG-05.jpg" id="galeriaImg" alt="Olive Farm" class="imagenScala80" >            
+                    </div>            
+                  </div><!-- row fin de mostrar -->
+                    <!-- seccion de thumbs -->
+                <div id="thumbsSeccion" class="row">
+                    <picture><img src="./imgs/local/IMG-05.jpg" alt="ads" class="imagenScala20 active" id="05" onclick="mostrarEnCarrusel('05');"></picture>
+                    <picture><img src="imgs/IMG-06.jpg" alt="asda" class="imagenScala20" id="06" onclick="mostrarEnCarrusel('06');"></picture>
+                    <picture></picture><img src="imgs/IMG-10.jpg" alt="asda" class="imagenScala20" id="10" onclick="mostrarEnCarrusel('10');"></picture>
+                </div>
+                <!-- fin de seccion de thumbs -->
+            </div><!-- div fin producto-fotos -->
+            <div id="producto-oferta" class="container">
+              <div class="row"> 
+                <section id="producto-oferta-ofrece" class="pt-4 col-4">
+                <div class="bg-olive text-green">
+                  <h3>Ofrecemos..</h3>
+                </div>                
+                <p id="ofrece">
+                  Muy bonito..
+                </p>
+                </section><!-- section fin producto-oferta-ofrece -->
+                <section id="producto-oferta-agro" class="pt-4 col-4">
+                  <div class="bg-warning text-white">
+                    <h3>Agro-Información</h3>
+                  </div>
+                  <p id="agro">
+                    Muy bonito..
+                  </p>
+                  </section><!-- section fin producto-oferta-agro -->
+                  <section id="producto-oferta-morfo" class="pt-4 col-4">
+                    <div class="bg-success text-white">
+                      <h3>Morfo-Información</h3>
+                    </div>
+                    <p id="morfo">
+                      Muy bonito..
+                    </p>
+                    </section><!-- section fin producto-oferta-morfo -->
+              </div>
+            </div><!-- div fin producto-oferta -->
+          </div><!-- div fin producto -->
           <!-- fin de fotos y cosa -->
           </div> <!-- fin col - 8 fotos de la finca -->
         </div><!-- fin row centro info -->
@@ -220,7 +254,7 @@
 </body>
 <script type="text/javascript" src="utls/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="utls/js/funcs.js"></script>
-
+<script type="text/javascript" src="utls/dts/data.js"></script>
 <!-- InstanceEnd -->
 
 </html>
