--- a/actvds.html
+++ b/actvds.html
@@ -51,13 +51,13 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="bd-placeholder-img" width="100%" height="100%" src="utls/imgs/local/IMG-22.jpg"
+            <img class="bd-placeholder-img" width="100%" height="100%" src="utls/imgs/local/IMG-01.jpg"
               aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
             <rect width="100%" height="100%" /></img>
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>El ganado cumple su rol.</h1>
-                <p>Some representative placeholder content for the third slide of this carousel.</p>
+                <h1>Productos de buena calidad.</h1>
+                <p>Todo cuanto ofrecemos posee garante y sabor de calidad internacional.</p>
               </div>
             </div>
           </div>
