--- a/prod.html
+++ b/prod.html
@@ -121,7 +121,12 @@
                       <div class="d-flex w-100 justify-content-start align-items-center">
                           <span class="menu-collapsed">Oh ! Premium olive oil</span>                              
                       </div>
-                  </a>                                 
+                  </a> 
+                  <a href="#producto" class="bg-olive list-group-item list-group-item-action flex-column align-items-start" onclick="cambioProdcc('olivo-sevi');">
+                    <div class="d-flex w-100 justify-content-start align-items-center">
+                        <span class="menu-collapsed">Plantas de Olivo</span>                              
+                    </div>
+                </a>                                  
                  <!-- Fin de Separator with title Olivos-->
                  
                       <!-- Separator with title Salsas-->
@@ -156,7 +161,7 @@
           <div id="producto"class="row container-fluid">
             <div id="producto-cabeza" class="pt-4 bg-success text-white justify-content-center">
               <h3 id="cabeza-olivo">
-                Olea europea &nbsp;                
+                Olea europaea &nbsp;                
                 <select id="producto-variedad" onchange="llenarProdcc(value)">
                   <option value="0" selected>Arbequina</option>
                   <option value="1">Arbosana</option>
