el numero marcado cambio enn prod matras

--- a/prod.html
+++ b/prod.html
@@ -176,20 +176,25 @@
               <h3 id="cabeza-otros">
               </h3>
             </div><!-- div fin producto-cabeza -->
-            <div id="producto-fotos" class="row">
-              <div class="row" id="ponerCarousel">
-                    <div >
-                        <img src="./imgs/local/IMG-05.jpg" id="galeriaImg" alt="Olive Farm" class="imagenScala80" >            
-                    </div>            
-                  </div><!-- row fin de mostrar -->
-                    <!-- seccion de thumbs -->
-                <div id="thumbsSeccion" class="row">
-                    <picture><img src="./imgs/local/IMG-05.jpg" alt="ads" class="imagenScala20 active" id="05" onclick="mostrarEnCarrusel('05');"></picture>
-                    <picture><img src="imgs/IMG-06.jpg" alt="asda" class="imagenScala20" id="06" onclick="mostrarEnCarrusel('06');"></picture>
-                    <img src="imgs/IMG-10.jpg" alt="asda" class="imagenScala20" id="10" onclick="mostrarEnCarrusel('10');"></picture>
-                </div>
-                <!-- fin de seccion de thumbs -->
-            </div><!-- div fin producto-fotos -->
+
+
+            <!-- aqui es algo -->
+          <div class="p-2 d-flex justify-content-center">
+            <div class="ecommerce-gallery"  >
+              <div class="row" id="galeria">                
+                    <img src="" id="galeriaImg" alt="Olive Farm" class="imagenScala80 " >                    
+              </div><!-- row fin de mostrar -->
+              <!-- seccion de thumbs -->
+            <div id="thumbsSeccion" class="row justify-content-center">
+              <img src="utls/imgs/local/IMG-05.jpg" alt="ads" class="imagenScala20 active" id="05" onclick="mostrarEnCarrusel('05','local');">              
+            </div>
+            <!-- fin de seccion de thumbs -->
+            </div>    
+         
+          </div>
+          <!-- fin de fotos y cosa -->
+
+            
             <!-- div id="producto-oferta" class="row container" -->
             <div id="producto-oferta" class="row ">
               <div class="row"> 
