se sigue complicando

--- a/prod.html
+++ b/prod.html
@@ -162,7 +162,7 @@
             <div id="producto-cabeza" class="pt-4 bg-success text-white justify-content-center">
               <h3 id="cabeza-olivo">
                 Olea europaea &nbsp;                
-                <select id="producto-variedad" onchange="llenarProdcc(value)">
+                <select id="producto-variedad" onchange="llenarProdcc(prod_olive[value],'Identificadas')">
                   <option value="0" selected>Arbequina</option>
                   <option value="1">Arbosana</option>
                   <option value="2">Ascolana</option>
