--- a/ciinv.html
+++ b/ciinv.html
@@ -132,7 +132,7 @@
                   <h4>Proyectos</h4>
                 </li>
                 <a href="#producto" class="bg-olive list-group-item list-group-item-action"
-                  onclick="cambioAcc('proy');">
+                  onclick="cambioCiencia('proy');">
                   <div class="d-flex justify-content-start ">
                     <span class="menu-bold">Internacionales</span>
                   </div>
@@ -155,8 +155,7 @@
             <!-- fin de fotos y cosa -->
             <!-- div id="producto-oferta" class="row container" -->
             
-            <div id="producto-oferta" class="row ">
-              
+            <div id="producto-oferta" class="row ">              
               <div class="row">
                 <!-- class="pt-4 col-6" -->
                 <section id="producto-oferta-ofrece">
