--- a/actvds.html
+++ b/actvds.html
@@ -129,6 +129,24 @@
                       <span class="menu-bold">Zona "Trabajo"</span>
                     </div>
                   </a>
+                  <a href="#producto" class="bg-olive list-group-item list-group-item-action"
+                    onclick="cambioProdcc('recog');">
+                    <div class="d-flex justify-content-start ">
+                      <span class="menu-bold">Recogida de frutas</span>
+                    </div>
+                  </a>
+                  <a href="#producto" class="bg-olive list-group-item list-group-item-action"
+                    onclick="cambioProdcc('edu');">
+                    <div class="d-flex justify-content-start ">
+                      <span class="menu-bold">Actividades educativas</span>
+                    </div>
+                  </a>
+                  <a href="#producto" class="bg-olive list-group-item list-group-item-action"
+                    onclick="cambioProdcc('t_ru');">
+                    <div class="d-flex justify-content-start ">
+                      <span class="menu-bold">Turismo Rural"</span>
+                    </div>
+                  </a>
                   <!--Fin de Separator with title Salsas-->
                 </ul><!-- fin Bootstrap List Group -->
               </div><!-- sidebar-container END -->
@@ -144,21 +162,18 @@
               <h3 id="cabeza-otros">
               </h3>
             </div><!-- div fin producto-cabeza -->
-
-
           <!-- aqui es algo -->
           <div class="p-2 d-flex justify-content-center">
             <div class="ecommerce-gallery"  >
+              <p id="ofrece"></p>
               <div class="row" id="galeria">                
                     <img src="" id="galeriaImg" alt="Olive Farm" class="imagenScala " >                    
               </div><!-- row fin de mostrar -->
               <!-- seccion de thumbs -->
-            <div id="thumbsSeccion" class="row justify-content-center">
-              
+            <div id="thumbsSeccion" class="row justify-content-center">              
             </div>
             <!-- fin de seccion de thumbs -->
-            </div>    
-         
+            </div>             
           </div>
           <!-- fin de fotos y cosa -->
           </div> <!-- fin col - 8 fotos de la finca -->
