--- a/ciinv.html
+++ b/ciinv.html
@@ -144,6 +144,14 @@
         <div class="col-8 border rounded-lg">
           <!-- aqui es algo -->
           <div id="producto" class="row container-fluid">
+            <div>
+              <p class="info-justify">
+                En este epígrafe se muestran las principales actividades que se desarrollan en la granja “Olive Land Farms” con el propósito de analizar y difundir los resultados de la producción científica que se lleva a cabo en el área.  
+              </p>
+              <p class="info-justify">
+                La investigación se desarrolla por el Dr. C Reinaldo Hanoi Valdés Reinoso, quien ha investigado temas relacionados con el establecimiento de las plantaciones, incluyendo la preparación del suelo hasta el manejo del cultivo del olivo con vistas a la obtención de productos de calidad y partiendo de un conjunto de soluciones innovadoras a partir de la gestión sostenible basadas en conceptos agroecológicos con vistas a mejorar la sostenibilidad del olivar
+              </p>
+            </div>
             <div id="producto-cabeza" class="pt-4 bg-success text-white justify-content-center">
               <h3 id="cabeza-producto">
               </h3>
