mejorando el entorno

--- a/actvds.html
+++ b/actvds.html
@@ -118,11 +118,18 @@
                   </li>
                   <a href="#producto"
                     class="bg-olive list-group-item list-group-item-action flex-column align-items-start"
+                    onclick="cambioProdcc('hhost');">
+                    <div class="d-flex w-100 justify-content-start align-items-center">
+                      <span class="menu-bold">  Harvest Host</span>
+                    </div>
+                  </a>                  
+                  <a href="#producto"
+                    class="bg-olive list-group-item list-group-item-action flex-column align-items-start"
                     onclick="cambioProdcc('visit');">
                     <div class="d-flex w-100 justify-content-start align-items-center">
                       <span class="menu-bold"> Visitas guiadas</span>
                     </div>
-                  </a>                  
+                  </a> 
                   <a href="#producto" class="bg-olive list-group-item list-group-item-action"
                     onclick="cambioProdcc('trab');">
                     <div class="d-flex justify-content-start ">
@@ -144,7 +151,7 @@
                   <a href="#producto" class="bg-olive list-group-item list-group-item-action"
                     onclick="cambioProdcc('t_ru');">
                     <div class="d-flex justify-content-start ">
-                      <span class="menu-bold">Turismo Rural"</span>
+                      <span class="menu-bold">Turismo Rural</span>
                     </div>
                   </a>
                   <!--Fin de Separator with title Salsas-->
