--- a/actvds.html
+++ b/actvds.html
@@ -14,7 +14,7 @@
   <link href="utls/css/mycss.css" rel="stylesheet" type="text/css">
 </head>
 
-<body onload="cambioProdcc('visit');">
+<body onload="cambioProdcc('hhost');">
 
   <div class="container">
     <!-- inicio .header -->
@@ -56,8 +56,8 @@
             <rect width="100%" height="100%" /></img>
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>Productos de buena calidad.</h1>
-                <p>Todo cuanto ofrecemos posee garante y sabor de calidad internacional.</p>
+                <h1>Productos de excelente calidad.</h1>
+                <p>Todo cuanto ofrecemos posee garant&iacute;a y sabor de calidad internacional.</p>
               </div>
             </div>
           </div>
