--- a/inform.html
+++ b/inform.html
@@ -14,7 +14,7 @@
   <link href="utls/css/mycss.css" rel="stylesheet" type="text/css">
 </head>
 
-<body onload="cambioProdccInf('j_osf');">
+<body onload="cambioProdccInf('j_osg');">
 
   <div class="container">
     <!-- inicio .header -->
@@ -120,15 +120,15 @@
                     </li>
                   <!-- /END Separator -->
                   <!-- Menu with submenu -->
-                  <a href="#producto" class="bg-olive list-group-item list-group-item-action flex-column align-items-start" onclick="cambioProdccInf('j_osf');">
+                  <a href="#producto" class="bg-olive list-group-item list-group-item-action flex-column align-items-start" onclick="cambioProdccInf('j_osg');">
                       <div class="d-flex w-100 justify-content-start align-items-center">
-                          <span class="menu-bold"> Olivares Santos Grampha´s</span>                        
+                          <span class="menu-bold"> Olivares Santos Grampha´s</span>        
                       </div>
                   </a> 
                   <a href="#producto" class="bg-olive list-group-item list-group-item-action flex-column align-items-start" onclick="cambioProdccInf('j_adolf');">
                     <div class="d-flex w-100 justify-content-start align-items-center">
                         <span class="menu-bold">
-                          Arma y descubre Olive Land Farm</span>                       
+                          Arma y descubre Olive Land Farm</span>               
                     </div>
                 </a>                                  
                  <!-- Fin de Separator with title Olivos-->                 
@@ -137,10 +137,10 @@
                         <h4>Libros</h4>
                     </li>
                     <!-- /END Separator -->
-                    <a href="#producto" class="bg-olive list-group-item list-group-item-action" onclick="cambioProdccInf('picant');">
+                    <a href="#producto" class="bg-olive list-group-item list-group-item-action" onclick="cambioProdccInf('l_diolf');">
                         <div class="d-flex justify-content-start ">
                             <span class="menu-bold">
-                              -- 
+                              Dream's in Olive Land Farm: Anthology of Stories for Children 
                             </span>
                         </div>
                     </a>
