--- a/inform.html
+++ b/inform.html
@@ -144,7 +144,15 @@
                             </span>
                         </div>
                     </a>
-                      <!--Fin de Separator with title Salsas-->                     
+                      
+                    <a href="#producto" class="bg-olive list-group-item list-group-item-action" onclick="cambioProdccInf('l_pmmd');">
+                      <div class="d-flex justify-content-start ">
+                          <span class="menu-bold">
+                            Propuesta de medidas para mitigar daños: Por encharcamiento en plantaciones de olivo 
+                          </span>
+                      </div>
+                  </a>
+                    <!--Fin de Separator with title Salsas-->                     
                 </ul><!-- fin Bootstrap List Group -->
               </div><!-- sidebar-container END -->              
             </div><!-- body-row END -->            
